fix: replace Collections.emptyMap() with Map.of() after rebase